--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello Fruntier</title>
+    <title>UserRequest</title>
 </head>
 <body>
-
+<h1>menu</h1>
+<p>
+    <a href="tool/userRequest">map</a>
+</p>
 </body>
 </html>
