refactor : match requestion of making running route URI into API specification

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,9 @@
 <body>
 <h1>menu</h1>
 <p>
-    <a href="tool/userRequest">map</a>
+    <a href="user/login">로그인</a>
+    <a href="user/join">회원가입</a>
+    <a href="running">길 찾기</a>
 </p>
 </body>
 </html>
