feat : implement route and record service and refactor js and htmls.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,7 +10,7 @@
     <a href="user/login">로그인</a>
     <a href="user/join">회원가입</a>
     <a href="running">길 찾기</a>
-    <a href="record">기록 검색</a>
+    <a href="route">기록 검색</a>
 </p>
 </body>
 </html>
